Adding zero buffer